[tool.poetry]
name = "steamcost"
version = "0.1.0"
description = ""
authors = ["Scott Odle <scott@sjodle.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
numpy = "^1.23.3"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
pandas = "^1.4.4"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
